Sources/ObjcParserAntlr/ObjectiveCPreprocessorParser.swift
// Generated from /Users/luizfernandosilva/Documents/git/grammars-v4-master/objc/two-step-processing/ObjectiveCPreprocessorParser.g4 by ANTLR 4.7
import Antlr4

open class ObjectiveCPreprocessorParser: Parser {

	internal static var _decisionToDFA: [DFA] = {
          var decisionToDFA = [DFA]()
          let length = ObjectiveCPreprocessorParser._ATN.getNumberOfDecisions()
          for i in 0..<length {
            decisionToDFA.append(DFA(ObjectiveCPreprocessorParser._ATN.getDecisionState(i)!, i))
           }
           return decisionToDFA
     }()
	internal static let _sharedContextCache: PredictionContextCache = PredictionContextCache()
	public enum Tokens: Int {
		case EOF = -1, SHARP = 1, CODE = 2, IMPORT = 3, INCLUDE = 4, PRAGMA = 5, 
                 DEFINE = 6, DEFINED = 7, IF = 8, ELIF = 9, ELSE = 10, UNDEF = 11, 
                 IFDEF = 12, IFNDEF = 13, ENDIF = 14, TRUE = 15, FALSE = 16, 
                 ERROR = 17, WARNING = 18, BANG = 19, LPAREN = 20, RPAREN = 21, 
                 EQUAL = 22, NOTEQUAL = 23, AND = 24, OR = 25, LT = 26, 
                 GT = 27, LE = 28, GE = 29, DIRECTIVE_WHITESPACES = 30, 
                 DIRECTIVE_STRING = 31, CONDITIONAL_SYMBOL = 32, DECIMAL_LITERAL = 33, 
                 FLOAT = 34, NEW_LINE = 35, DIRECITVE_COMMENT = 36, DIRECITVE_LINE_COMMENT = 37, 
                 DIRECITVE_NEW_LINE = 38, DIRECITVE_TEXT_NEW_LINE = 39, 
                 TEXT = 40, SLASH = 41
	}
	public static let RULE_objectiveCDocument = 0, RULE_text = 1, RULE_code = 2, 
                   RULE_directive = 3, RULE_directive_text = 4, RULE_preprocessor_expression = 5
	public static let ruleNames: [String] = [
		"objectiveCDocument", "text", "code", "directive", "directive_text", "preprocessor_expression"
	]

	private static let _LITERAL_NAMES: [String?] = [
		nil, "'#'", nil, nil, nil, "'pragma'", nil, "'defined'", "'if'", "'elif'", 
		"'else'", "'undef'", "'ifdef'", "'ifndef'", "'endif'", nil, nil, "'error'", 
		"'warning'", "'!'", "'('", "')'", "'=='", "'!='", "'&&'", "'||'", "'<'", 
		"'>'", "'<='", "'>='"
	]
	private static let _SYMBOLIC_NAMES: [String?] = [
		nil, "SHARP", "CODE", "IMPORT", "INCLUDE", "PRAGMA", "DEFINE", "DEFINED", 
		"IF", "ELIF", "ELSE", "UNDEF", "IFDEF", "IFNDEF", "ENDIF", "TRUE", "FALSE", 
		"ERROR", "WARNING", "BANG", "LPAREN", "RPAREN", "EQUAL", "NOTEQUAL", "AND", 
		"OR", "LT", "GT", "LE", "GE", "DIRECTIVE_WHITESPACES", "DIRECTIVE_STRING", 
		"CONDITIONAL_SYMBOL", "DECIMAL_LITERAL", "FLOAT", "NEW_LINE", "DIRECITVE_COMMENT", 
		"DIRECITVE_LINE_COMMENT", "DIRECITVE_NEW_LINE", "DIRECITVE_TEXT_NEW_LINE", 
		"TEXT", "SLASH"
	]
	public static let VOCABULARY: Vocabulary = Vocabulary(_LITERAL_NAMES, _SYMBOLIC_NAMES)

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	//@Deprecated
	public let tokenNames: [String?]? = {
	    let length = _SYMBOLIC_NAMES.count
	    var tokenNames = [String?](repeating: nil, count: length)
		for i in 0..<length {
			var name = VOCABULARY.getLiteralName(i)
			if name == nil {
				name = VOCABULARY.getSymbolicName(i)
			}
			if name == nil {
				name = "<INVALID>"
			}
			tokenNames[i] = name
		}
		return tokenNames
	}()

	open func getTokenNames() -> [String?]? {
		return tokenNames
	}

	override
	open func getGrammarFileName() -> String { return "ObjectiveCPreprocessorParser.g4" }

	override
	open func getRuleNames() -> [String] { return ObjectiveCPreprocessorParser.ruleNames }

	override
	open func getSerializedATN() -> String { return ObjectiveCPreprocessorParser._serializedATN }

	override
	open func getATN() -> ATN { return ObjectiveCPreprocessorParser._ATN }

	open override func getVocabulary() -> Vocabulary {
	    return ObjectiveCPreprocessorParser.VOCABULARY
	}

	public override init(_ input:TokenStream)throws {
	    RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION)
		try super.init(input)
		_interp = ParserATNSimulator(self,ObjectiveCPreprocessorParser._ATN,ObjectiveCPreprocessorParser._decisionToDFA, ObjectiveCPreprocessorParser._sharedContextCache)
	}
	open class ObjectiveCDocumentContext:ParserRuleContext {
		open func EOF() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.EOF.rawValue, 0) }
		open func text() -> Array<TextContext> {
			return getRuleContexts(TextContext.self)
		}
		open func text(_ i: Int) -> TextContext? {
			return getRuleContext(TextContext.self,i)
		}
		open override func getRuleIndex() -> Int { return ObjectiveCPreprocessorParser.RULE_objectiveCDocument }
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterObjectiveCDocument(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitObjectiveCDocument(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitObjectiveCDocument(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitObjectiveCDocument(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	open func objectiveCDocument() throws -> ObjectiveCDocumentContext {
		var _localctx: ObjectiveCDocumentContext = ObjectiveCDocumentContext(_ctx, getState())
		try enterRule(_localctx, 0, ObjectiveCPreprocessorParser.RULE_objectiveCDocument)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	try enterOuterAlt(_localctx, 1)
		 	setState(15)
		 	try _errHandler.sync(self)
		 	_la = try _input.LA(1)
		 	while (//closure
		 	 { () -> Bool in
		 	      let testSet: Bool = _la == ObjectiveCPreprocessorParser.Tokens.SHARP.rawValue || _la == ObjectiveCPreprocessorParser.Tokens.CODE.rawValue
		 	      return testSet
		 	 }()) {
		 		setState(12)
		 		try text()


		 		setState(17)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 	}
		 	setState(18)
		 	try match(ObjectiveCPreprocessorParser.Tokens.EOF.rawValue)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
	open class TextContext:ParserRuleContext {
		open func code() -> CodeContext? {
			return getRuleContext(CodeContext.self,0)
		}
		open func SHARP() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.SHARP.rawValue, 0) }
		open func directive() -> DirectiveContext? {
			return getRuleContext(DirectiveContext.self,0)
		}
		open func NEW_LINE() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.NEW_LINE.rawValue, 0) }
		open func EOF() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.EOF.rawValue, 0) }
		open override func getRuleIndex() -> Int { return ObjectiveCPreprocessorParser.RULE_text }
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterText(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitText(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitText(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitText(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	open func text() throws -> TextContext {
		var _localctx: TextContext = TextContext(_ctx, getState())
		try enterRule(_localctx, 2, ObjectiveCPreprocessorParser.RULE_text)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(25)
		 	try _errHandler.sync(self)
		 	switch (ObjectiveCPreprocessorParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .CODE:
		 		try enterOuterAlt(_localctx, 1)
		 		setState(20)
		 		try code()

		 		break

		 	case .SHARP:
		 		try enterOuterAlt(_localctx, 2)
		 		setState(21)
		 		try match(ObjectiveCPreprocessorParser.Tokens.SHARP.rawValue)
		 		setState(22)
		 		try directive()
		 		setState(23)
		 		_la = try _input.LA(1)
		 		if (!(//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == ObjectiveCPreprocessorParser.Tokens.EOF.rawValue || _la == ObjectiveCPreprocessorParser.Tokens.NEW_LINE.rawValue
		 		      return testSet
		 		 }())) {
		 		try _errHandler.recoverInline(self)
		 		}
		 		else {
		 			_errHandler.reportMatch(self)
		 			try consume()
		 		}

		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
	open class CodeContext:ParserRuleContext {
		open func CODE() -> Array<TerminalNode> { return getTokens(ObjectiveCPreprocessorParser.Tokens.CODE.rawValue) }
		open func CODE(_ i:Int) -> TerminalNode?{
			return getToken(ObjectiveCPreprocessorParser.Tokens.CODE.rawValue, i)
		}
		open override func getRuleIndex() -> Int { return ObjectiveCPreprocessorParser.RULE_code }
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterCode(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitCode(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitCode(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitCode(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	open func code() throws -> CodeContext {
		var _localctx: CodeContext = CodeContext(_ctx, getState())
		try enterRule(_localctx, 4, ObjectiveCPreprocessorParser.RULE_code)
		defer {
	    		try! exitRule()
	    }
		do {
			var _alt:Int
		 	try enterOuterAlt(_localctx, 1)
		 	setState(28); 
		 	try _errHandler.sync(self)
		 	_alt = 1;
		 	repeat {
		 		switch (_alt) {
		 		case 1:
		 			setState(27)
		 			try match(ObjectiveCPreprocessorParser.Tokens.CODE.rawValue)


		 			break
		 		default:
		 			throw ANTLRException.recognition(e: NoViableAltException(self))
		 		}
		 		setState(30); 
		 		try _errHandler.sync(self)
		 		_alt = try getInterpreter().adaptivePredict(_input,2,_ctx)
		 	} while (_alt != 2 && _alt !=  ATN.INVALID_ALT_NUMBER)

		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}

		return _localctx
	}
	open class DirectiveContext:ParserRuleContext {
		open override func getRuleIndex() -> Int { return ObjectiveCPreprocessorParser.RULE_directive }
	 
		public  func copyFrom(_ ctx: DirectiveContext) {
			super.copyFrom(ctx)
		}
	}
	public  final class PreprocessorDefContext: DirectiveContext {
		open func IFDEF() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.IFDEF.rawValue, 0) }
		open func CONDITIONAL_SYMBOL() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.CONDITIONAL_SYMBOL.rawValue, 0) }
		open func IFNDEF() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.IFNDEF.rawValue, 0) }
		open func UNDEF() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.UNDEF.rawValue, 0) }
		public init(_ ctx: DirectiveContext) {
			super.init()
			copyFrom(ctx)
		}
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterPreprocessorDef(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitPreprocessorDef(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitPreprocessorDef(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitPreprocessorDef(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public  final class PreprocessorErrorContext: DirectiveContext {
		open func ERROR() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.ERROR.rawValue, 0) }
		open func directive_text() -> Directive_textContext? {
			return getRuleContext(Directive_textContext.self,0)
		}
		public init(_ ctx: DirectiveContext) {
			super.init()
			copyFrom(ctx)
		}
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterPreprocessorError(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitPreprocessorError(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitPreprocessorError(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitPreprocessorError(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public  final class PreprocessorConditionalContext: DirectiveContext {
		open func IF() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.IF.rawValue, 0) }
		open func preprocessor_expression() -> Preprocessor_expressionContext? {
			return getRuleContext(Preprocessor_expressionContext.self,0)
		}
		open func ELIF() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.ELIF.rawValue, 0) }
		open func ELSE() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.ELSE.rawValue, 0) }
		open func ENDIF() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.ENDIF.rawValue, 0) }
		public init(_ ctx: DirectiveContext) {
			super.init()
			copyFrom(ctx)
		}
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterPreprocessorConditional(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitPreprocessorConditional(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitPreprocessorConditional(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitPreprocessorConditional(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public  final class PreprocessorImportContext: DirectiveContext {
		open func directive_text() -> Directive_textContext? {
			return getRuleContext(Directive_textContext.self,0)
		}
		open func IMPORT() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.IMPORT.rawValue, 0) }
		open func INCLUDE() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.INCLUDE.rawValue, 0) }
		public init(_ ctx: DirectiveContext) {
			super.init()
			copyFrom(ctx)
		}
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterPreprocessorImport(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitPreprocessorImport(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitPreprocessorImport(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitPreprocessorImport(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public  final class PreprocessorPragmaContext: DirectiveContext {
		open func PRAGMA() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.PRAGMA.rawValue, 0) }
		open func directive_text() -> Directive_textContext? {
			return getRuleContext(Directive_textContext.self,0)
		}
		public init(_ ctx: DirectiveContext) {
			super.init()
			copyFrom(ctx)
		}
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterPreprocessorPragma(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitPreprocessorPragma(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitPreprocessorPragma(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitPreprocessorPragma(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public  final class PreprocessorDefineContext: DirectiveContext {
		open func DEFINE() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.DEFINE.rawValue, 0) }
		open func CONDITIONAL_SYMBOL() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.CONDITIONAL_SYMBOL.rawValue, 0) }
		open func directive_text() -> Directive_textContext? {
			return getRuleContext(Directive_textContext.self,0)
		}
		public init(_ ctx: DirectiveContext) {
			super.init()
			copyFrom(ctx)
		}
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterPreprocessorDefine(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitPreprocessorDefine(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitPreprocessorDefine(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitPreprocessorDefine(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	public  final class PreprocessorWarningContext: DirectiveContext {
		open func WARNING() -> TerminalNode? { return getToken(ObjectiveCPreprocessorParser.Tokens.WARNING.rawValue, 0) }
		open func directive_text() -> Directive_textContext? {
			return getRuleContext(Directive_textContext.self,0)
		}
		public init(_ ctx: DirectiveContext) {
			super.init()
			copyFrom(ctx)
		}
		override
		open func enterRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).enterPreprocessorWarning(self)
			}
		}
		override
		open func exitRule(_ listener: ParseTreeListener) {
			if listener is ObjectiveCPreprocessorParserListener {
			 	(listener as! ObjectiveCPreprocessorParserListener).exitPreprocessorWarning(self)
			}
		}
		override
		open func accept<T>(_ visitor: ParseTreeVisitor<T>) -> T? {
			if visitor is ObjectiveCPreprocessorParserVisitor {
			     return (visitor as! ObjectiveCPreprocessorParserVisitor<T>).visitPreprocessorWarning(self)
			}else if visitor is ObjectiveCPreprocessorParserBaseVisitor {
		    	 return (visitor as! ObjectiveCPreprocessorParserBaseVisitor<T>).visitPreprocessorWarning(self)
		    }
			else {
			     return visitor.visitChildren(self)
			}
		}
	}
	@discardableResult
	open func directive() throws -> DirectiveContext {
		var _localctx: DirectiveContext = DirectiveContext(_ctx, getState())
		try enterRule(_localctx, 6, ObjectiveCPreprocessorParser.RULE_directive)
		var _la: Int = 0
		defer {
	    		try! exitRule()
	    }
		do {
		 	setState(57)
		 	try _errHandler.sync(self)
		 	switch (ObjectiveCPreprocessorParser.Tokens(rawValue: try _input.LA(1))!) {
		 	case .IMPORT:fallthrough
		 	case .INCLUDE:
		 		_localctx =  PreprocessorImportContext(_localctx);
		 		try enterOuterAlt(_localctx, 1)
		 		setState(32)
		 		_la = try _input.LA(1)
		 		if (!(//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == ObjectiveCPreprocessorParser.Tokens.IMPORT.rawValue || _la == ObjectiveCPreprocessorParser.Tokens.INCLUDE.rawValue
		 		      return testSet
		 		 }())) {
		 		try _errHandler.recoverInline(self)
		 		}
		 		else {
		 			_errHandler.reportMatch(self)
		 			try consume()
		 		}
		 		setState(33)
		 		try directive_text()

		 		break

		 	case .IF:
		 		_localctx =  PreprocessorConditionalContext(_localctx);
		 		try enterOuterAlt(_localctx, 2)
		 		setState(34)
		 		try match(ObjectiveCPreprocessorParser.Tokens.IF.rawValue)
		 		setState(35)
		 		try preprocessor_expression(0)

		 		break

		 	case .ELIF:
		 		_localctx =  PreprocessorConditionalContext(_localctx);
		 		try enterOuterAlt(_localctx, 3)
		 		setState(36)
		 		try match(ObjectiveCPreprocessorParser.Tokens.ELIF.rawValue)
		 		setState(37)
		 		try preprocessor_expression(0)

		 		break

		 	case .ELSE:
		 		_localctx =  PreprocessorConditionalContext(_localctx);
		 		try enterOuterAlt(_localctx, 4)
		 		setState(38)
		 		try match(ObjectiveCPreprocessorParser.Tokens.ELSE.rawValue)

		 		break

		 	case .ENDIF:
		 		_localctx =  PreprocessorConditionalContext(_localctx);
		 		try enterOuterAlt(_localctx, 5)
		 		setState(39)
		 		try match(ObjectiveCPreprocessorParser.Tokens.ENDIF.rawValue)

		 		break

		 	case .IFDEF:
		 		_localctx =  PreprocessorDefContext(_localctx);
		 		try enterOuterAlt(_localctx, 6)
		 		setState(40)
		 		try match(ObjectiveCPreprocessorParser.Tokens.IFDEF.rawValue)
		 		setState(41)
		 		try match(ObjectiveCPreprocessorParser.Tokens.CONDITIONAL_SYMBOL.rawValue)

		 		break

		 	case .IFNDEF:
		 		_localctx =  PreprocessorDefContext(_localctx);
		 		try enterOuterAlt(_localctx, 7)
		 		setState(42)
		 		try match(ObjectiveCPreprocessorParser.Tokens.IFNDEF.rawValue)
		 		setState(43)
		 		try match(ObjectiveCPreprocessorParser.Tokens.CONDITIONAL_SYMBOL.rawValue)

		 		break

		 	case .UNDEF:
		 		_localctx =  PreprocessorDefContext(_localctx);
		 		try enterOuterAlt(_localctx, 8)
		 		setState(44)
		 		try match(ObjectiveCPreprocessorParser.Tokens.UNDEF.rawValue)
		 		setState(45)
		 		try match(ObjectiveCPreprocessorParser.Tokens.CONDITIONAL_SYMBOL.rawValue)

		 		break

		 	case .PRAGMA:
		 		_localctx =  PreprocessorPragmaContext(_localctx);
		 		try enterOuterAlt(_localctx, 9)
		 		setState(46)
		 		try match(ObjectiveCPreprocessorParser.Tokens.PRAGMA.rawValue)
		 		setState(47)
		 		try directive_text()

		 		break

		 	case .ERROR:
		 		_localctx =  PreprocessorErrorContext(_localctx);
		 		try enterOuterAlt(_localctx, 10)
		 		setState(48)
		 		try match(ObjectiveCPreprocessorParser.Tokens.ERROR.rawValue)
		 		setState(49)
		 		try directive_text()

		 		break

		 	case .WARNING:
		 		_localctx =  PreprocessorWarningContext(_localctx);
		 		try enterOuterAlt(_localctx, 11)
		 		setState(50)
		 		try match(ObjectiveCPreprocessorParser.Tokens.WARNING.rawValue)
		 		setState(51)
		 		try directive_text()

		 		break

		 	case .DEFINE:
		 		_localctx =  PreprocessorDefineContext(_localctx);
		 		try enterOuterAlt(_localctx, 12)
		 		setState(52)
		 		try match(ObjectiveCPreprocessorParser.Tokens.DEFINE.rawValue)
		 		setState(53)
		 		try match(ObjectiveCPreprocessorParser.Tokens.CONDITIONAL_SYMBOL.rawValue)
		 		setState(55)
		 		try _errHandler.sync(self)
		 		_la = try _input.LA(1)
		 		if (//closure
		 		 { () -> Bool in
		 		      let testSet: Bool = _la == ObjectiveCPreprocessorParser.Tokens.TEXT.rawValue
		 		      return testSet
		 		 }()) {
		 			setState(54)
		 			try directive_text()

		 		}


		 		break
		 	default:
		 		throw ANTLRException.recognition(e: NoViableAltException(self))
		 	}
		}
		catch ANTLRException.recognition(let re) {
			_localctx.exception = re
			_errHandler.reportError(self, re)
			try _errHandler.recover(self, re)
		}
